--- a/site-plan.css
+++ b/site-plan.css
@@ -5,10 +5,10 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94;
-  --secondary-color: #E7C24F;
-  --accent1-color: #A43312;
-  --accent2-color: white;
+  --primary-color: #436548;
+  --secondary-color: #805A48;
+  --accent1-color: #8C8048;
+  --accent2-color: #2C6F93;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
