--- a/site-plan.css
+++ b/site-plan.css
@@ -2,6 +2,7 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Oswald:wght@500&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -15,13 +16,13 @@ Fonts are separated by a | */
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: black;  /* headlines on a white background */ 
+  --headline-color-on-white: #436548;  /* headlines on a white background */ 
   --headline-color-on-color: #FFFFFF; /* headlines on a colored background */ 
   --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
-  --text-background-color: #000000;
-  --nav-link-color: #396E94;
-  --nav-background-color: #E7C24F;
+  --text-background-color: #5488A4;
+  --nav-link-color: #8C8048;
+  --nav-background-color: #436548;
   --nav-hover-link-color: #E7C24F;
   --nav-hover-background-color: #396E94;
 }
@@ -41,7 +42,7 @@ img {
   max-width: 100%;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
+  font-family: Oswald;
   color: var(--headline-color-on-white);
 }
 header {
@@ -55,7 +56,7 @@ header > h1, header > h2 {
 }
 
 p {
-  font-family: var(--paragraph-font);
+  font-family: Bodoni Moda;
   color: var(--paragraph-color);
   padding: 1em;
 }
