--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
-
-h1,h2,h3,h4,h5,h6{
-  background-color: #8C8048
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  background-color: #8C8048;
 }
-#content{
-  max-width: 960px
+#content {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+#home-paragraph-3 {
+  text-align: center;
 }
