--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,13 @@ h6 {
 #content {
   max-width: 960px;
   margin: 0 auto;
+  background-color:#2C6F93;
 }
 
 .home-paragraph-3 {
   text-align: center;
 }
 
+nav a{
+    color: #436548;
+}   
