--- a/positionstyles.css
+++ b/positionstyles.css
@@ -1,44 +1,54 @@
 /* CSS - Name: "positionstyles.css" */
 /* Activity 1 styles */
 .content1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  justify-items: center;
+  grid-gap: 20px;
   /* This is the parent of the activity 1 boxes. */
 
 }
 .red1 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
+  grid-column: 1/3;
 
 } 
 .green1 {
-  width: 100px; 
+  width: 200px; 
   height: 100px; 
-  background-color: green; 
+  background-color: green;
 
 } 
 .yellow1 {
-  width: 100px; 
+  width: 200px; 
   height: 100px; 
   background-color: gold; 
 } 
 .blue1 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 1/3;
 } 
 /* Activity 2 styles */ 
 .content2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   /* This is the parent of the activity 2 boxes. */
 }
 .red2 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1/3;
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  grid-column: 2/4
 } 
 .yellow2 {
   width: 100px; 
