--- a/positionstyles.css
+++ b/positionstyles.css
@@ -42,13 +42,13 @@
   width: 100px; 
   height: 100px; 
   background-color: red; 
-  grid-column: 1/3;
+  grid-column: 1/2;
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
   background-color: green; 
-  grid-column: 2/4
+  grid-column:
 } 
 .yellow2 {
   width: 100px; 
