--- a/positionstyles.css
+++ b/positionstyles.css
@@ -35,32 +35,38 @@
 /* Activity 2 styles */ 
 .content2 {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-rows: minmax(90px, auto);
+  grid-template-columns: repeat(10, 1fr);
+  grid-auto-rows: repeat(5, 1fr);
+  grid-gap: 20px;
   /* This is the parent of the activity 2 boxes. */
 }
-.red2 {
-  width: 100px; 
-  height: 100px; 
+.red2 { 
+  width: 200px;
+  height: 200px;
   background-color: red; 
-  grid-column: 1/2;
-} 
-.green2 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-  grid-column: 2/3;
+  grid-column: 1/3;
   grid-row: 1/3;
 } 
+.green2 { 
+  width: 200px;
+  height: 200px;
+  background-color: green; 
+  grid-column: 2/4;
+  grid-row: 2/4;
+} 
 .yellow2 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px;
+  height: 200px;
   background-color: gold; 
+  grid-column: 3/5;
+  grid-row: 3/5;
 } 
 .blue2 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px;
+  height: 200px;
   background-color: blue; 
+  grid-column: 4/6;
+  grid-row: 4/6;
 } 
 /* Activity 3 styles */ 
 .content3 {
