--- a/positionstyles.css
+++ b/positionstyles.css
@@ -141,48 +141,63 @@
   height: 400px;
 }
 .red5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: red;
 }
 .green5 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: green;
+  float: left;
 }
 .yellow5 {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 300px;
   background-color: gold;
 }
 .blue5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: blue;
 }
 /* Activity 6 styles */
 .content6 {
+  width: 600px;
+  height: 600px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   /* This is the parent of the activity 6 boxes. */
 }
 .red6 {
-  width: 100px;
-  height: 100px;
+  width: 400px;
+  height: 200px;
   background-color: red;
+  z-index:1;
 }
 .green6 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: green;
+  z-index:4;
+  grid-column:1/3;
+  grid-row:5/7;
 }
 .yellow6 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 400px;
   background-color: gold;
+  grid-column: 5/7;
+  grid-row: 3/7;
+  z-index: 3;
 }
 .blue6 {
-  width: 100px;
-  height: 100px;
+  width: 400px;
+  height: 400px;
   background-color: blue;
+  grid-column:2/6;
+  grid-row:2/6;
 }
 
 /* Do not make any changes below here */
