--- a/positionstyles.css
+++ b/positionstyles.css
@@ -175,6 +175,8 @@
   height: 200px;
   background-color: red;
   z-index:1;
+  grid-column:1/5;
+  grid-row:1/3;
 }
 .green6 {
   width: 200px;
@@ -198,6 +200,7 @@
   background-color: blue;
   grid-column:2/6;
   grid-row:2/6;
+  z-index: 2;
 }
 
 /* Do not make any changes below here */
