--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,48 @@ main {
   padding: 0.2em;
   margin-top: 0.5em;
 }
+.banner-box img {
+    width: 100%;
+}        
+.home-grid {
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
+  grid-gap: 1em;
+}
+
+.home-headline-1 {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+}
+
+.home-right-img {
+  grid-column: 4 / 6;
+  grid-row: 1 / 3;
+}
+
+.home-paragraph-1 {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+}
+
+.home-left-img {
+  grid-column: 1 / 3;
+  grid-row: 3 / 5;
+}
+
+.home-headline-2 {
+  grid-column: 3 / 6;
+  grid-row: 3 / 4;
+}
+
+.home-paragraph-2 {
+  grid-column: 4 / 6;
+  grid-row: 4/6;
+}
+
+.home-paragraph-3 {
+  grid-column: 2 / 5;
+  grid-row: 5/6;
+  text-align: center;
+}
+
