--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato");
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Oswald:wght@500&display=swap");
-
+img {
+    max-width: 100%;
+}   
 h1,
 h2,
 h3,
@@ -91,4 +93,27 @@ main {
   grid-row: 5/6;
   text-align: center;
 }
-
+header {
+    display: grid;
+    grid-template-columns: 110px auto;    
+    align-items: center;
+}
+nav ul {
+    list-style: none; /* removes the bullets! */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));  
+    margin: 0;
+}
+nav a:hover {
+  background-color: #FFFFFF;
+  color: #8C8048;
+}
+footer {
+  width: 100%;
+  height: 55px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+footer img {
+  float: right;
+}
