--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato");
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Oswald:wght@500&display=swap");
 img {
-    max-width: 100%;
-}   
+  max-width: 100%;
+}
 h1,
 h2,
 h3,
@@ -11,6 +11,10 @@ h5,
 h6 {
   background-color: #8C8048;
   font-family: Lato;
+}
+h2 {
+  border-top: 5px double;
+  border-bottom: 5px double;
 }
 #content {
   max-width: 960px;
@@ -50,8 +54,8 @@ main {
   margin-top: 0.5em;
 }
 .banner-box img {
-    width: 100%;
-}        
+  width: 100%;
+}
 .home-grid {
   display: grid;
   grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
@@ -94,15 +98,15 @@ main {
   text-align: center;
 }
 header {
-    display: grid;
-    grid-template-columns: 110px auto;    
-    align-items: center;
+  display: grid;
+  grid-template-columns: 110px auto;
+  align-items: center;
 }
 nav ul {
-    list-style: none; /* removes the bullets! */
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));  
-    margin: 0;
+  list-style: none; /* removes the bullets! */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
+  margin: 0;
 }
 nav a:hover {
   background-color: #FFFFFF;
@@ -116,4 +120,18 @@ footer {
 }
 footer img {
   float: right;
+}
+.logo-box {
+  background-color: white;
+  border-radius: 50px 50px 0 0;
+  padding: 0.5em;
+  border: 1px solid #a43312;
+}
+@media screen and (max-width: 550px) {
+  /* beginning of media query */
+  .home-grid {
+    display: block;
+  }
+
+  /* end of media query */
 }
