--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,10 @@ main {
   grid-column: 1 / 4;
   grid-row: 1 / 2;
 }
-
+.contact-headline-1 {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+}
 .home-right-img {
   grid-column: 4 / 6;
   grid-row: 1 / 3;
