--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,14 @@ main {
   grid-row: 1 / 2;
 }
 .contact-headline-1 {
-  grid-column: 1 / 4;
+  grid-column: 1 / 6;
   grid-row: 1 / 2;
+  text-align: center;
+}
+#times{
+    list-style: none;
+    text-align: center;
+    grid-column:1/6;
 }
 .home-right-img {
   grid-column: 4 / 6;
