--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ main {
 }
 .home-grid {
   display: grid;
-  grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1em;
 }
 
@@ -71,10 +71,10 @@ main {
   grid-row: 1 / 2;
   text-align: center;
 }
-#times{
-    list-style: none;
-    text-align: center;
-    grid-column:1/6;
+#times {
+  list-style: none;
+  text-align: center;
+  grid-column: 1/6;
 }
 .home-right-img {
   grid-column: 4 / 6;
@@ -95,12 +95,19 @@ main {
   grid-column: 3 / 6;
   grid-row: 3 / 4;
 }
-
+.contact-headline-2 {
+  grid-column: 3 / 6;
+  grid-row: 3 / 4;
+}
 .home-paragraph-2 {
   grid-column: 4 / 6;
   grid-row: 4/6;
 }
-
+.contact-paragraph-2 {
+  grid-column: 4 / 6;
+  grid-row: 4/6;
+  margin-top: 0px;
+}
 .home-paragraph-3 {
   grid-column: 2 / 5;
   grid-row: 5/6;
